-
Bug
-
Resolution: Done
-
P2: Important
-
5.7.1
-
-
f6c17c37ba4e588a8c9a579cfbfb40709fe7cf0e
When using Qt.ForbiddenCursor the quality of the cursor icon is poor
Steps to reproduce the issue:
1. Run attached test application
2. Observe how ForbiddenCursor is rendered.
Expected outcome:
ForbiddenCursor is rendered similarly to native cursor
Actual outcome:
Cursor quality is poor for ForbiddenCursor
| For Gerrit Dashboard: QTBUG-58378 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 184020,3 | QCursor: Remove old pixmaps and use native cursor on macOS | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |