QCursor: Remove old pixmaps and use native cursor on macOS

The DragCopyCursor part is a regression from ed55c4a14c9e8b70b3947c.

Change-Id: Id98a40c372e48f09d8c1824a4c2c1df2a3bdd052
Task-number: QTBUG-58378
Reviewed-by: Erik Verbruggen <erik.verbruggen@qt.io>